# g4eflash

./: .gitignore  CMakeLists.txt  README.md  analysis.ipynb  analysis_root.ipynb  eflash.cc  init_vis.mac  run.mac  vis.mac
include/: ActionInitialisation.hh  ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  Parameters.hh  PhantomPhaseSpaceSD.hh  PhantomSD.hh  PhaseSpaceGeneratorAction.hh  PhaseSpaceSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
src/: ActionInitialisation.cc  ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhantomPhaseSpaceSD.cc  PhantomSD.cc  PhaseSpaceGeneratorAction.cc  PhaseSpaceSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
